SAK-33595 Java 11 (#8974)